updata ad new product , comments , deletModal , users

--- a/src/cms.css
+++ b/src/cms.css
@@ -20,6 +20,11 @@
     visibility: visible;
     opacity: 1;
 }
+.cms_main{
+    margin-top: 60px;
+    padding: 20px;
+    border-radius: 25px;
+}
 
 .cms-table {
     margin-top: 20px;
