--- a/src/Components/AddNweProduct/AddNewProduct.css
+++ b/src/Components/AddNweProduct/AddNewProduct.css
@@ -49,7 +49,7 @@
     border-radius: 10px;
     font-size: 1.1rem;
     cursor: pointer;
-    border: none;
+    border: none; margin-top: .5rem;
   }
   .add_product_icon{
     font-size:1.5rem;
